# saude-publica-br

./: -w  .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LAUNCH.md  LICENSE  Makefile  PUBLICACAO_CUSTO_ZERO.md  README.md  SETUP.md  base.md  bootstrap.py  docker-compose.yml  pyproject.toml  pytest.ini  railway.toml  requirements.txt  vercel.json
.github/workflows/: api-ci.yml  dbt-docs.yml  deploy-site.yml  deploy.yml  frontend-ci.yml  supabase-keepalive.yml  validate-data.yml
api/: Dockerfile  cache.py  database.py  deps.py  main.py  requirements-dev.txt  requirements.txt  schemas.py
api/middleware/: api_key.py  auth.py  metrics.py
api/models/: user.py
api/routers/: __init__.py  auth.py  cnes.py  dashboards.py  epidemiologia.py  exports.py  indicadores.py  internacoes.py  mortalidade.py  nacional.py  producao.py  ranking.py  sinan.py
api/v1/: __init__.py  capacidade.py  doencas.py  mortalidade.py  producao.py  router.py  schema.py
clients/python/: README.md  pyproject.toml
clients/python/saudeemdado/: __init__.py
dashboard/: Home.py  api_client.py  app.py
dashboard/.streamlit/: config.toml
dashboard/pages/: 1_Mapa.py  2_Serie_Temporal.py  3_Anomalias.py  4_Ranking.py  5_Epidemiologia.py
dashboard_publico/: app.py  requirements.txt
data/marts/: dim_cid10_categoria.parquet  dim_cluster_municipio.parquet  dim_ivs.parquet  dim_municipio.parquet  dim_pop_faixa.parquet  dim_pop_padrao.parquet  dim_populacao.parquet  mart_dengue_municipio_ano.parquet  mart_dengue_semana.parquet  mart_excesso_uf_mes.parquet  mart_fluxo_intermunicipal.parquet  mart_icsap_municipio.parquet  (+6 more)
dbt/: dbt_project.yml  packages.yml  profiles.yml
deploy/: .env.production  bootstrap.sh  configure-secrets.sh  setup-server.sh
flows/: __init__.py  dbt_run.py  weekly_ingest.py  weekly_ingest_cnes.py  weekly_ingest_nacional.py  weekly_ingest_sih.py  weekly_ingest_sim.py  weekly_ingest_sinan.py
frontend/: Dockerfile  middleware.ts  next.config.ts  package.json  tailwind.config.ts
ingestion/: __init__.py  ingest_all_states.py  ingest_cnes.py  ingest_sia_pa.py  ingest_sih.py  ingest_sim.py  ingest_sinan.py  refs_loader.py  setup_supabase.sql
mcp/: server.py
mcp_server/: server.py
migrations/: V006__mart_anomalias_prophet.sql  V007__sim_do_raw.sql  V008__sih_aih_raw.sql  V009__mart_mortalidade.sql  V010__mart_internacoes.sql  V011__sinan_notificacoes.sql  V012__cnes_raw.sql  V013__partitioned_tables_27_estados.sql  V014__user_auth_dashboards.sql  V015__api_keys_public.sql
ml/: __init__.py  anomaly_detector.py  batch_scorer.py
monitoring/: prometheus.yml
nginx/: Dockerfile  nginx.conf
scripts/: baixar_malhas.py  find_ivs.py  generate_demo_data.py  github_device_auth.py  inspect_header.py  inspect_schema.py  load_demo_data.sh  pipeline_clusters.py  pipeline_custo_zero.py  pipeline_ivs.py  pipeline_sih.py  pipeline_sih_agravo.py  pipeline_sih_fluxo.py  pipeline_sinan.py  pipeline_sinasc.py  pipeline_v2.py  probe_sources.py  sensibilidade_excesso_idade.py  supabase_keepalive.ps1  validate_data.py
site/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
site/app/: page.tsx  (+4 more)
tests/: conftest.py  test_api_anomalias.py  test_ml_anomaly_detector.py
validation/: __init__.py  loader.py  run_validations.py
(+147 files in other folders)
