[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saudeemdado"
version = "2.0.0"
description = "Cliente Python para a API pública do Saúde em Dado — mortalidade no Brasil (SIM/DataSUS, 2015–2024)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pedro Paulo Fernandes", email = "pedropaulofernandes88@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]
keywords = ["datasus", "sim", "mortalidade", "epidemiologia", "dados abertos", "brasil"]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]

[project.urls]
Homepage = "https://saudeemdado.com"
Repository = "https://github.com/pedropaulofernandes88-stack/saude-publica-br"
